added portfolio content

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 
     <main class="wrapper">
         <section class="section parallax bg1">
-            <h1>Mike Moore</h1>
-            <h2>Web Developer</h2>
+            <div>
+                <h1>Mike Moore</h1>
+            </div>
+            <div>
+                <h2 class="light-grey">Web Development</h2>
+            </div>
+            <div>
+                <h2 class="grey">Graphic Design</h2>
+            </div>
         </section>
         <section class="section static">
             <h2>About Me</h2>
@@ -35,8 +42,10 @@
             <!-- <a href="https://github.com/mikemoore1618"></a>
     <a href="https://www.linkedin.com/in/mikemoore1618/"></a> -->
 
-            <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the time. Currently, I’m working as a freelance and contract web developerand graphic designer.</p> 
-                
+            <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be a
+                carpenter, which taught me how to be extremely detail oriented and how to be “on” all the time.
+                Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
+
             <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
         </section>
         <section class="section parallax bg2">
@@ -45,18 +54,49 @@
         <section class="section static">
 
             <div class="ui equal width grid">
-                <div class="column"><h3>Langauges</h3>
-                    <p>HTML | CSS | Javascript | Ruby</p></div>
-                <div class="column"><h3>Libraries & Frameworks</h3>
-                    <p>jQuery | Rails | Node | Express | React | Socket.io | Bootstrap</p></div>
-                <div class="column"><h3>Databases</h3>
-                    <p>PostgreSQL | MongoDB</p></div>
-                    <div class="column"><h3>Software</h3>
-                        <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p></div>
+                <div class="column">
+                    <h3>Langauges</h3>
+                    <p>HTML | CSS | Javascript | Ruby</p>
+                </div>
+                <div class="column">
+                    <h3>Libraries & Frameworks</h3>
+                    <p>jQuery | Rails | Node | Express | React | Socket.io | Bootstrap</p>
+                </div>
+                <div class="column">
+                    <h3>Databases</h3>
+                    <p>PostgreSQL | MongoDB</p>
+                </div>
+                <div class="column">
+                    <h3>Software</h3>
+                    <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p>
+                </div>
             </div>
         </section>
         <section class="section parallax bg3">
             <h1>Portfolio</h1>
+        </section>
+        <section class="section static">
+            <div class="ui equal width grid">
+                <div class="column">
+                    <h3>Pong</h3>
+                    <p>JavaScript | HTML | CSS | jQuery</p>
+                    <img src="https://i.imgur.com/3lH33mo.png">
+                    <p>Pong is a two-dimensional sports game that simulates tennis, or Ping
+                        Pong, or air hockey?</p>
+                    <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
+                    <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
+                </div>
+                <div class="column">
+                    <h3>Spotify Go!</h3>
+                    <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
+                    <img src="https://i.imgur.com/nDDPqsm.jpg">
+                    <p>This app aims solve to Spotify's clunky "Friend Activity" section and
+                        make it easier to check out what your friends are listening to and post songs youre currently
+                        groovin' too!</p>
+                    <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
+                    <a href="https://github.com/needimf/CampShare">Check out the code!</a>
+                </div>
+            </div>
         </section>
     </main>
 
