fixed grid for portfolio content section

--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
             </div>
         </section>
         <section class="section static">
-            <h2>About Me</h2>
-            <i class="github icon huge link blue"></i>
-            <i class="gitlab icon huge link blue"></i>
-            <i class="linkedin icon link huge blue"></i>
+            <div class="ui two column centered grid">
+                <div class="column">
+                    <h2>About Me</h2>
+                    <i class="github icon huge link blue"></i>
+                    <i class="gitlab icon huge link blue"></i>
+                    <i class="linkedin icon link huge blue"></i>
 
-            <!-- <a href="https://github.com/mikemoore1618"></a>
+                    <!-- <a href="https://github.com/mikemoore1618"></a>
     <a href="https://www.linkedin.com/in/mikemoore1618/"></a> -->
 
-            <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be a
-                carpenter, which taught me how to be extremely detail oriented and how to be “on” all the time.
-                Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
-
+                    <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be
+                        a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the time.
+                        Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
+                </div>
+            </div>
             <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
         </section>
         <section class="section parallax bg2">
@@ -75,8 +78,8 @@
         <section class="section parallax bg3">
             <h1>Portfolio</h1>
         </section>
-        <section class="section static">
-            <div class="ui equal width grid">
+        <section class="section static portfolio-content">
+            <div class="ui two column centered grid">
                 <div class="column">
                     <h3>Pong</h3>
                     <p>JavaScript | HTML | CSS | jQuery</p>
@@ -85,17 +88,47 @@
                         Pong, or air hockey?</p>
                     <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
                     <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
-                </div>
-                <div class="column">
+
                     <h3>Spotify Go!</h3>
                     <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
-                    <img src="https://i.imgur.com/nDDPqsm.jpg">
+                    <img src="https://i.imgur.com/3lH33mo.png">
                     <p>This app aims solve to Spotify's clunky "Friend Activity" section and
                         make it easier to check out what your friends are listening to and post songs youre currently
                         groovin' too!</p>
                     <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
                     <a href="https://github.com/needimf/CampShare">Check out the code!</a>
-                </div>
+                
+                    <h3>Red Rover</h3>
+                    <p>JavaScript | Node.js | Express | MongoDB/Mongoose</p>
+                    <img src="https://i.imgur.com/3lH33mo.png">
+                    <p>Earth: The year is 2139. The massive, long-standing global military
+                        conflict between the nations and militaries of Humanity and a collective of self-aware robots
+                        let by Mecha-Elon Musk is over and the world finally knows true peace.</p>
+                    <p>Robots have now begun to spread across the Solar System and Mars has emerged as the next HOT
+                        vacation destination!</p>
+                    <p>But where to go? How can you sift through the endless pages or useless travel sites and the
+                        onsloaught of spam and advertisements?</p>
+                    <p>Look no further! Red Rover is the one-stop-shop for Robots like you to Review Popular Mars
+                        Destinations! Log in, search sites, read descriptions, view images, and even chat with other
+                        live robots!</p>
+                    <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
+                    <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
+
+                    <h3>Data Tracker</h3>
+                    <p>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</p>
+                    <img src="https://i.imgur.com/3lH33mo.png">
+                    <p>Have you always wanted to track your daily habits and and wanted to see
+                        if there was a connectiom or correlation between them?like, for example, if when I eat 6 pieces
+                        of pizza my energy level drops the next day and I'm pissed off at the world, or if when I
+                        excersize after work am I more likely to sleep well that night and be in a good mood the next
+                        day?</p>
+                    <p>I have looked for an ap out there that allows me to do this digitally, but in my search, I
+                        havent been able to find an app quite like the one im looking for that is well designed and
+                        easy to use, so, I decided to make one!</p>
+                    <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
+                    <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the code!</a>
+                
+            </div>
             </div>
         </section>
     </main>
