moved content around page

--- a/index.html
+++ b/index.html
@@ -56,32 +56,26 @@
             <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
         </section>
         <section class="section parallax bg2">
-            <h1>Skills and Technologies</h1>
+                <div class="ui equal width grid">
+                        <div class="column">
+                            <h3>Langauges</h3>
+                            <p>HTML | CSS | Javascript | Ruby</p>
+                        </div>
+                        <div class="column">
+                            <h3>Libraries & Frameworks</h3>
+                            <p>jQuery | Rails | Node | Express | React | Socket.io | Bootstrap</p>
+                        </div>
+                        <div class="column">
+                            <h3>Databases</h3>
+                            <p>PostgreSQL | MongoDB</p>
+                        </div>
+                        <div class="column">
+                            <h3>Software</h3>
+                            <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p>
+                        </div>
+                    </div>
         </section>
-        <section class="section static">
-
-            <div class="ui equal width grid">
-                <div class="column">
-                    <h3>Langauges</h3>
-                    <p>HTML | CSS | Javascript | Ruby</p>
-                </div>
-                <div class="column">
-                    <h3>Libraries & Frameworks</h3>
-                    <p>jQuery | Rails | Node | Express | React | Socket.io | Bootstrap</p>
-                </div>
-                <div class="column">
-                    <h3>Databases</h3>
-                    <p>PostgreSQL | MongoDB</p>
-                </div>
-                <div class="column">
-                    <h3>Software</h3>
-                    <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p>
-                </div>
-            </div>
-        </section>
-        <section class="section parallax bg3">
-            <h1>Portfolio</h1>
-        </section>
+        
         <section class="section static portfolio-content">
             <div class="ui two column centered grid">
                 <div class="column">
@@ -136,9 +130,9 @@
             </div>
         </section>
     </main>
-    <section class="section static">
-        <p>© 2018 Mike Moore</p>
-    </section>
+    <section class="section parallax bg3">
+            <h3>© 2018 Mike Moore</h3>
+        </section>
 
     <!-- Scripts-->
     <script src="js/main.js"></script>
