bg image changes

--- a/index.html
+++ b/index.html
@@ -40,30 +40,29 @@
             <div class="ui two column centered grid">
                 <div class="column">
                     <h2>About Me</h2>
-                    <i class="github icon huge link blue"></i>
-                    <i class="gitlab icon huge link blue"></i>
-                    <i class="linkedin icon link huge blue"></i>
-
-                    <!-- <a href="https://github.com/mikemoore1618"></a>
-    <a href="https://www.linkedin.com/in/mikemoore1618/"></a> -->
-
-                    <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be
-                        a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the
+                    
+                    <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the
                         time.
                         Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
+                        <div class="column">
+                        <a href="https://github.com/mikemoore1618"><i class="github icon huge link black"></i></a>
+                    <a href="https://gitlab.com/mike_moore"><i class="gitlab icon huge link orange"></i></a>
+                    <a href="https://www.linkedin.com/in/mikemoore1618/"><i class="linkedin icon huge link blue"></i></a>
+
                 </div>
             </div>
             <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
         </section>
         <section class="section parallax bg2">
-                <div class="ui equal width grid">
+                <div class="ui four column centered grid">
                         <div class="column">
                             <h3>Langauges</h3>
-                            <p>HTML | CSS | Javascript | Ruby</p>
+                            <p>HTML<i class="html5 icon"></i> | CSS<i class="css3 alternate icon"></i> | Javascript<i class="js icon"></i> | Ruby<i class="gem icon"></i></p>
                         </div>
                         <div class="column">
                             <h3>Libraries & Frameworks</h3>
-                            <p>jQuery | Rails | Node | Express | React | Socket.io | Bootstrap</p>
+                            <p>jQuery | Rails | Node<i class="node js icon"></i> | Express | React<i class="react icon"></i>| Socket.io | </p>
+                            <!-- Bootstrap | Semantic UI | Tachyons  -->
                         </div>
                         <div class="column">
                             <h3>Databases</h3>
@@ -129,10 +128,10 @@
                 </div>
             </div>
         </section>
+        <section class="section parallax bg3">
+            </section>
     </main>
-    <section class="section parallax bg3">
-            <h3>© 2018 Mike Moore</h3>
-        </section>
+   
 
     <!-- Scripts-->
     <script src="js/main.js"></script>
