--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="css/main.css">
   <title>blah</title>
 </head>
+
 <body id="top">
   <div class="navbar-fixed">
     <nav class="white" role="navigation">
@@ -38,12 +40,11 @@
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
-        <h1 class="header teal-text text-lighten-2">Mike Moore</h1>
         <div class="row">
-          <h4 class="header col s12 light">Web Developer</h4>
-        </div>
-        <div class="row">
-          
+            <div class="col offset-l5 s12 m9">
+          <h4 class="header">Mike Moore</h4>
+          <h4 class="header">Web Developer</h4>
+          </div>
         </div>
       </div>
     </div>
@@ -60,17 +61,19 @@
           <img class="responsive-img materialboxed" src="https://i.imgur.com/YT1MCGB.jpg" alt="Mike Moore Profile Photo">
         </div> -->
 
-        <div class="col s8">
+        <div class="col offset-l2 l8 s12 m9">
           <h5>About Me</h5>
           <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be
-                a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the
-                time.
-                Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
+            a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the
+            time.
+            Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
 
-                <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
-
-                <a class="btn-floating btn-large waves-effect waves-light" href="https://github.com/mikemoore1618"><i class="socicon-github"></i></a>
-          <a class="btn-floating btn-large waves-effect waves-light" href="https://www.linkedin.com/in/mikemoore1618/"><i class="socicon-linkedin"></i></a>
+          <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
+          <div class="center">
+            <a class="btn-floating btn-large waves-effect waves-light" href="https://github.com/mikemoore1618"><i class="socicon-github"></i></a>
+            <a class="btn-floating btn-large waves-effect waves-light" href="https://www.linkedin.com/in/mikemoore1618/"><i
+                class="socicon-linkedin"></i></a>
+          </div>
         </div>
       </div>
 
@@ -81,26 +84,26 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center">
-                <div class="column">
-                        <h3>Langauges</h3>
-                        <p>HTML<i class="html5 icon"></i> | CSS<i class="css3 alternate icon"></i> | Javascript<i class="js icon"></i>
-                            | Ruby<i class="gem icon"></i></p>
-                    </div>
-                    <div class="column">
-                        <h3>Libraries & Frameworks</h3>
-                        <p>jQuery | Rails | Node<i class="node js icon"></i> | Express | React<i class="react icon"></i>|
-                            Socket.io | </p>
-                        <!-- Bootstrap | Semantic UI | Tachyons  -->
-                    </div>
-                    <div class="column">
-                        <h3>Databases</h3>
-                        <p>PostgreSQL | MongoDB</p>
-                    </div>
-                    <div class="column">
-                        <h3>Software</h3>
-                        <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p>
-                    </div>
+        <div class="row">
+          <div class="col l3 s6">
+            <h6>Langauges</h6>
+            <p>HTML<i class="html5 icon"></i> | CSS<i class="css3 alternate icon"></i> | Javascript<i class="js icon"></i>
+              | Ruby<i class="gem icon"></i></p>
+          </div>
+          <div class="col l3 s6">
+            <h6>Libraries & Frameworks</h6>
+            <p>jQuery | Rails | Node<i class="node js icon"></i> | Express | React<i class="react icon"></i>|
+              Socket.io | </p>
+            <!-- Bootstrap | Semantic UI | Tachyons  -->
+          </div>
+          <div class="col l3 s6">
+            <h6>Databases</h6>
+            <p>PostgreSQL | MongoDB</p>
+          </div>
+          <div class="col l3 s6">
+            <h6>Software</h6>
+            <p>Adobe Illustrator | Adobe Photoshop | Adobe InDesign | Google Sketchup</p>
+          </div>
         </div>
       </div>
     </div>
@@ -109,80 +112,78 @@
 
   <div class="container">
     <div class="section">
-
       <div class="row">
-      <div class="row anchor" id="portfolio">
-          <div class="col s12 m9">
+        <div class="row anchor" id="portfolio">
+          <div class="col offset-l2 l8 s12 m9">
             <div class="row">
               <div class="col s12">
-                  <h4>Portfolio</h4>
-                    <h3>Pong</h3>
-                    <p>JavaScript | HTML | CSS | jQuery</p>
-                    <img src="https://i.imgur.com/3lH33mo.png">
-                    <p>Pong is a two-dimensional sports game that simulates tennis, or Ping
-                        Pong, or air hockey?</p>
-                    <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
-                    <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
+                <h4>Portfolio</h4>
+                <h3>Pong</h3>
+                <p>JavaScript | HTML | CSS | jQuery</p>
+                <img src="https://i.imgur.com/3lH33mo.png">
+                <p>Pong is a two-dimensional sports game that simulates tennis, or Ping
+                  Pong, or air hockey?</p>
+                <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
+                <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
 
-                    <h3>Spotify Go!</h3>
-                    <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
-                    <img src="https://i.imgur.com/3lH33mo.png">
-                    <p>This app aims solve to Spotify's clunky "Friend Activity" section and
-                        make it easier to check out what your friends are listening to and post songs youre currently
-                        groovin' too!</p>
-                    <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
-                    <a href="https://github.com/needimf/CampShare">Check out the code!</a>
+                <h3>Spotify Go!</h3>
+                <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
+                <img src="https://i.imgur.com/3lH33mo.png">
+                <p>This app aims solve to Spotify's clunky "Friend Activity" section and
+                  make it easier to check out what your friends are listening to and post songs youre currently
+                  groovin' too!</p>
+                <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
+                <a href="https://github.com/needimf/CampShare">Check out the code!</a>
 
-                    <h3>Red Rover</h3>
-                    <p>JavaScript | Node.js | Express | MongoDB/Mongoose</p>
-                    <img src="https://i.imgur.com/3lH33mo.png">
-                    <p>Earth: The year is 2139. The massive, long-standing global military
-                        conflict between the nations and militaries of Humanity and a collective of self-aware robots
-                        let by Mecha-Elon Musk is over and the world finally knows true peace.</p>
-                    <p>Robots have now begun to spread across the Solar System and Mars has emerged as the next HOT
-                        vacation destination!</p>
-                    <p>But where to go? How can you sift through the endless pages or useless travel sites and the
-                        onsloaught of spam and advertisements?</p>
-                    <p>Look no further! Red Rover is the one-stop-shop for Robots like you to Review Popular Mars
-                        Destinations! Log in, search sites, read descriptions, view images, and even chat with other
-                        live robots!</p>
-                    <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
-                    <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
+                <h3>Red Rover</h3>
+                <p>JavaScript | Node.js | Express | MongoDB/Mongoose</p>
+                <img src="https://i.imgur.com/3lH33mo.png">
+                <p>Earth: The year is 2139. The massive, long-standing global military
+                  conflict between the nations and militaries of Humanity and a collective of self-aware robots
+                  let by Mecha-Elon Musk is over and the world finally knows true peace.</p>
+                <p>Robots have now begun to spread across the Solar System and Mars has emerged as the next HOT
+                  vacation destination!</p>
+                <p>But where to go? How can you sift through the endless pages or useless travel sites and the
+                  onsloaught of spam and advertisements?</p>
+                <p>Look no further! Red Rover is the one-stop-shop for Robots like you to Review Popular Mars
+                  Destinations! Log in, search sites, read descriptions, view images, and even chat with other
+                  live robots!</p>
+                <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
+                <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
 
-                    <h3>Data Tracker</h3>
-                    <p>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</p>
-                    <img src="https://i.imgur.com/3lH33mo.png">
-                    <p>Have you always wanted to track your daily habits and and wanted to see
-                        if there was a connectiom or correlation between them?like, for example, if when I eat 6 pieces
-                        of pizza my energy level drops the next day and I'm pissed off at the world, or if when I
-                        excersize after work am I more likely to sleep well that night and be in a good mood the next
-                        day?</p>
-                    <p>I have looked for an ap out there that allows me to do this digitally, but in my search, I
-                        havent been able to find an app quite like the one im looking for that is well designed and
-                        easy to use, so, I decided to make one!</p>
-                    <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
-                    <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the code!</a>
+                <h3>Data Tracker</h3>
+                <p>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</p>
+                <img src="https://i.imgur.com/3lH33mo.png">
+                <p>Have you always wanted to track your daily habits and and wanted to see
+                  if there was a connectiom or correlation between them?like, for example, if when I eat 6 pieces
+                  of pizza my energy level drops the next day and I'm pissed off at the world, or if when I
+                  excersize after work am I more likely to sleep well that night and be in a good mood the next
+                  day?</p>
+                <p>I have looked for an ap out there that allows me to do this digitally, but in my search, I
+                  havent been able to find an app quite like the one im looking for that is well designed and
+                  easy to use, so, I decided to make one!</p>
+                <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
+                <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the code!</a>
               </div>
             </div>
           </div>
         </div>
-
-    </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          
-        </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://i.imgur.com/uVEcTf1.jpg" alt="Joshua Tree Photograph"></div>
-  </div>
 
-  <!-- <footer id="contact" class="page-footer teal">
+
+    <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center">
+
+          </div>
+        </div>
+      </div>
+      <div class="parallax"><img src="https://i.imgur.com/uVEcTf1.jpg" alt="Joshua Tree Photograph"></div>
+    </div>
+
+    <!-- <footer id="contact" class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l5 s12">
@@ -216,10 +217,11 @@
     </div>
   </footer> -->
 
-  <!-- Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
-  <script src="js/main.js"></script>
+    <!-- Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
+
 </html>
