--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
   <!--Import local stylesheet-->
   <link rel="stylesheet" href="css/main.css">
-  <title>blah</title>
+  <title>Mike Moore</title>
 </head>
 
 <body id="top">
@@ -41,14 +41,14 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row">
-            <div class="col offset-l5 s12 m9">
-          <h4 class="header">Mike Moore</h4>
-          <h4 class="header">Web Developer</h4>
+          <div class="col offset-l5 s12 m9">
+            <h4 class="header">Mike Moore</h4>
+            <h4 class=>Web Developer</h4>
           </div>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://i.imgur.com/zKWv7oY.jpg" alt="El Capitan Yosemite Photograph"></div>
+    <div class="parallax"><img src="https://i.imgur.com/XCDH7Ud.jpg" alt="Nedim Filipovic Dog Mountain photograph"></div>
   </div>
 
 
@@ -58,16 +58,15 @@
       <!--   Icon Section   -->
       <div id="about" class="row anchor">
         <!-- <div class="col s4">
-          <img class="responsive-img materialboxed" src="https://i.imgur.com/YT1MCGB.jpg" alt="Mike Moore Profile Photo">
-        </div> -->
+            <img class="responsive-img materialboxed" src="https://i.imgur.com/YT1MCGB.jpg" alt="Mike Moore Profile Photo">
+          </div> -->
 
-        <div class="col offset-l2 l8 s12 m9">
+        <div class="col s8">
           <h5>About Me</h5>
           <p>Im a software developer and graphic designer working primarily in Ruby and ReactJS. I used to be
             a carpenter, which taught me how to be extremely detail oriented and how to be “on” all the
             time.
             Currently, I’m working as a freelance and contract web developerand graphic designer.</p>
-
           <!-- <p>Additional technologies I've worked with include JavaScript, jQuery, Mongoose, MongoDB, Axios, bCrypt, JWT, Express, Node.js, React, Nodemon, Morgan, Bootstrap, Semantic UI, CSS, HTML, AJAX, Passport, Socket.io, EJS, PostgreSQL, Adobe Photoshop, Adobe Illustrator, Adobe In Design, Google Sketchup.</p> -->
           <div class="center">
             <a class="btn-floating btn-large waves-effect waves-light" href="https://github.com/mikemoore1618"><i class="socicon-github"></i></a>
@@ -76,7 +75,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -85,6 +83,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row">
+          <h4>Skills & Technologies</h4>
           <div class="col l3 s6">
             <h6>Langauges</h6>
             <p>HTML<i class="html5 icon"></i> | CSS<i class="css3 alternate icon"></i> | Javascript<i class="js icon"></i>
@@ -107,120 +106,105 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://i.imgur.com/DRJgZPA.jpg" alt="Big Sur Ocean Photograph"></div>
+
+    <div class="parallax"><img src="https://i.imgur.com/wgKyvY2.jpg" alt="Big Sur Ocean Photograph"></div>
   </div>
 
   <div class="container">
     <div class="section">
-      <div class="row">
-        <div class="row anchor" id="portfolio">
-          <div class="col offset-l2 l8 s12 m9">
-            <div class="row">
-              <div class="col s12">
-                <h4>Portfolio</h4>
-                <h3>Pong</h3>
-                <p>JavaScript | HTML | CSS | jQuery</p>
-                <img src="https://i.imgur.com/3lH33mo.png">
-                <p>Pong is a two-dimensional sports game that simulates tennis, or Ping
-                  Pong, or air hockey?</p>
-                <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
-                <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
+          <div class="row">
+            <div class="row anchor" id="portfolio">
+              <div class="col offset-l2 l8 s12 m9">
+                <div class="row">
+                  <div class="col s12">
+                    <h4>Portfolio</h4>
+                    <h3>Pong</h3>
+                    <p>JavaScript | HTML | CSS | jQuery</p>
+                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
+                    <p>Pong is a two-dimensional sports game that simulates tennis, or Ping
+                      Pong, or air hockey?</p>
+                    <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
+                    <a href="https://github.com/mikemoore1618/project-1-game-pong">Check out the code!</a>
 
-                <h3>Spotify Go!</h3>
-                <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
-                <img src="https://i.imgur.com/3lH33mo.png">
-                <p>This app aims solve to Spotify's clunky "Friend Activity" section and
-                  make it easier to check out what your friends are listening to and post songs youre currently
-                  groovin' too!</p>
-                <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
-                <a href="https://github.com/needimf/CampShare">Check out the code!</a>
+                    <h3>Spotify Go!</h3>
+                    <p>Ruby on Rails | PostgreSQL | HTML | CSS</p>
+                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
+                    <p>This app aims solve to Spotify's clunky "Friend Activity" section and
+                      make it easier to check out what your friends are listening to and post songs youre currently
+                      groovin' too!</p>
+                    <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
+                    <a href="https://github.com/needimf/CampShare">Check out the code!</a>
 
-                <h3>Red Rover</h3>
-                <p>JavaScript | Node.js | Express | MongoDB/Mongoose</p>
-                <img src="https://i.imgur.com/3lH33mo.png">
-                <p>Earth: The year is 2139. The massive, long-standing global military
-                  conflict between the nations and militaries of Humanity and a collective of self-aware robots
-                  let by Mecha-Elon Musk is over and the world finally knows true peace.</p>
-                <p>Robots have now begun to spread across the Solar System and Mars has emerged as the next HOT
-                  vacation destination!</p>
-                <p>But where to go? How can you sift through the endless pages or useless travel sites and the
-                  onsloaught of spam and advertisements?</p>
-                <p>Look no further! Red Rover is the one-stop-shop for Robots like you to Review Popular Mars
-                  Destinations! Log in, search sites, read descriptions, view images, and even chat with other
-                  live robots!</p>
-                <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
-                <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
+                    <h3>Red Rover</h3>
+                    <p>JavaScript | Node.js | Express | MongoDB/Mongoose</p>
+                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
+                    <p>Earth: The year is 2139. The massive, long-standing global military
+                      conflict between the nations and militaries of Humanity and a collective of self-aware robots
+                      let by Mecha-Elon Musk is over and the world finally knows true peace.</p>
+                    <p>Robots have now begun to spread across the Solar System and Mars has emerged as the next HOT
+                      vacation destination!</p>
+                    <p>But where to go? How can you sift through the endless pages or useless travel sites and the
+                      onsloaught of spam and advertisements?</p>
+                    <p>Look no further! Red Rover is the one-stop-shop for Robots like you to Review Popular Mars
+                      Destinations! Log in, search sites, read descriptions, view images, and even chat with other
+                      live robots!</p>
+                    <a href="https://lets--fly.herokuapp.com/">Try it here!</a>|
+                    <a href="https://github.com/chetskii/red-rover">Check out the code!</a>
 
-                <h3>Data Tracker</h3>
-                <p>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</p>
-                <img src="https://i.imgur.com/3lH33mo.png">
-                <p>Have you always wanted to track your daily habits and and wanted to see
-                  if there was a connectiom or correlation between them?like, for example, if when I eat 6 pieces
-                  of pizza my energy level drops the next day and I'm pissed off at the world, or if when I
-                  excersize after work am I more likely to sleep well that night and be in a good mood the next
-                  day?</p>
-                <p>I have looked for an ap out there that allows me to do this digitally, but in my search, I
-                  havent been able to find an app quite like the one im looking for that is well designed and
-                  easy to use, so, I decided to make one!</p>
-                <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
-                <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the code!</a>
+                    <h3>Data Tracker</h3>
+                    <p>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</p>
+                    <!-- <img src="https://i.imgur.com/3lH33mo.png"> -->
+                    <p>Have you always wanted to track your daily habits and and wanted to see
+                      if there was a connectiom or correlation between them?like, for example, if when I eat 6 pieces
+                      of pizza my energy level drops the next day and I'm pissed off at the world, or if when I
+                      excersize after work am I more likely to sleep well that night and be in a good mood the next
+                      day?</p>
+                    <p>I have looked for an ap out there that allows me to do this digitally, but in my search, I
+                      havent been able to find an app quite like the one im looking for that is well designed and
+                      easy to use, so, I decided to make one!</p>
+                    <a href="https://gentle-stream-96140.herokuapp.com/">Try it here!</a>|
+                    <a href="https://github.com/mikemoore1618/p4_react_app_data_tracker">Check out the code!</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-
-    <div class="parallax-container valign-wrapper">
-      <div class="section no-pad-bot">
-        <div class="container">
-          <div class="row center">
-
+      <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+          <div class="container">
+            <div class="row center">
+              <h5 class="header col s12 light">P.S. I like photography, and all of these photos are mine!</h5>
+            </div>
           </div>
         </div>
+        <div class="parallax"><img src="https://i.imgur.com/0BhiwyV.jpg" alt="Joshua Tree Photograph"></div>
       </div>
-      <div class="parallax"><img src="https://i.imgur.com/uVEcTf1.jpg" alt="Joshua Tree Photograph"></div>
-    </div>
 
-    <!-- <footer id="contact" class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l5 s12">
-          <h5 class="white-text">Contact</h5>
-          <p class="grey-text text-lighten-4">If you want to get in touch or have any questions, feel free to contact me!</p>
-
-
+      <footer id="contact" class="page-footer teal">
+        <div class="container">
+          <div class="row">
+            <div class="col l2 s12">
+              <p>San Fransisco, Ca</p>
+            </div>
+            <div class="col l3 s12">
+              <p>mikemoore1618@gmail.com</p>
+            </div>
+          </div>
         </div>
-        <div class="col l2 s12">
-          <h5 class="white-text">Location</h5>
-          <p>Portland, OR</p>
+        <div class="footer-copyright">
+          <div class="container">
+            © 2018 Michael Moore
+          </div>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Email</h5>
-          <p>mikemoore1618@gmail.com</p>
-        </div>
+      </footer>
 
-        <div class="col l2 s12">
-          <h5 class="white-text">Resources</h5>
-          <ul>
-            <li><a class="white-text" href="https://www.linkedin.com/in/mikemoore1619">LinkedIn</a></li>
-            <li><a class="white-text" href="https://github.com/mikemoore1618">Github</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      © 2017 Mike Moore
-      </div>
-    </div>
-  </footer> -->
-
-    <!-- Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
-    <script src="js/main.js"></script>
+      <!-- Scripts-->
+      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
+      <script src="js/main.js"></script>
 
 </body>
 
