--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
   <!--Import local stylesheet-->
   <link rel="stylesheet" href="css/main.css">
-  <title>Mike Moore</title>
+  <title>Michael Moore</title>
 </head>
 
 <body id="top">
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="row">
           <div class="col offset-l5 s12 m9">
-            <h4 class="header">Mike Moore</h4>
+            <h4 class="header">Michael Moore</h4>
             <h4 class=>Web Developer</h4>
           </div>
         </div>
