changed portfolio pictures

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <!-- <h2>Portfolio</h2> -->
             <h3>Pong</h3>
             <h4>JavaScript | HTML | CSS | jQuery</h4>
-            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <img class="portfolio-imgs" src="https://i.imgur.com/p1k3Fwj.png">
             <p>
               My rendition of Pong, one of the earliest arcade video games. It is a table tennis sports game featuring simple two-dimensional graphics. The game was originally manufactured by Atari, which released it in 1972. Allan Alcorn created Pong as a training exercise assigned to him by Atari co-founder Nolan Bushnel</p>
             <a href="https://mikemoore1618.github.io/project-1-game-pong/">Try it here!</a>|
@@ -120,7 +120,7 @@
 
             <h3>Spotify Go!</h3>
             <h4>Ruby on Rails | PostgreSQL | HTML | CSS</h4>
-            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <img class="portfolio-imgs" src="https://i.imgur.com/maRgIOb.png">
             <p>Think Spotify meets Instagram: This app makes it easy to share and explore your favorite music with your friends! Sign in, post music, find your freinds, sort your music feed by most recent, alphabetical, or random!</p>
             <a href="https://peaceful-sea-29225.herokuapp.com/">Try it here!</a>|
             <a href="https://github.com/needimf/CampShare">Check out the code!</a>
@@ -154,7 +154,7 @@
           <div>
             <h3>Data Tracker</h3>
             <h4>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</h4>
-            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <img class="portfolio-imgs" src="https://i.imgur.com/J9DIn9J.png">
             <p>Havent been sleeping well? Maybe its because youve been eating pizza before bed. Been in the best mood
               of your life this week? Mybe it's because you've been doing yoga every morning! Track all of your daily
               habits to see correlations between them!</p>
