--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="centre">
           <div>
             <!-- <h2>Portfolio</h2> -->
-            <h3>Pong</h3>
+            <h2>Pong</h2>
             <h4>JavaScript | HTML | CSS | jQuery</h4>
             <img class="portfolio-imgs" src="https://i.imgur.com/p1k3Fwj.png">
             <p>
@@ -118,7 +118,7 @@
         <div class="centre">
           <div>
 
-            <h3>Spotify Go!</h3>
+            <h2>Spotify Go!</h2>
             <h4>Ruby on Rails | PostgreSQL | HTML | CSS</h4>
             <img class="portfolio-imgs" src="https://i.imgur.com/maRgIOb.png">
             <p>Think Spotify meets Instagram: This app makes it easy to share and explore your favorite music with your friends! Sign in, post music, find your freinds, sort your music feed by most recent, alphabetical, or random!</p>
@@ -133,9 +133,9 @@
       <div class="parallax__layer parallax__layer--base">
         <div class="centre">
           <div>
-            <h3>Red Rover</h3>
+            <h2>Red Rover</h2>
             <h4>JavaScript | Node.js | Express | MongoDB/Mongoose</h4>
-            <img class="portfolio-imgs" src="https://i.imgur.com/3lH33mo.png">
+            <img class="portfolio-imgs" src="https://i.imgur.com/3lh23mo.png">
             <p>Elon Musk's robots have gained consciousness and are spreading across the Solar System. Mars has emerged
               as the next <em>HOT</em>robot vacation destination- But where do you go? How can you sift through the
               endless pages of useless travel sites? Look no further! Red Rover is the one-stop-shop for Robots like you! Log in, search, explore, and even
@@ -152,7 +152,7 @@
       <div class="parallax__layer parallax__layer--base">
         <div class="centre">
           <div>
-            <h3>Data Tracker</h3>
+            <h2>Data Tracker</h2>
             <h4>React | JavaScript | Node.js | Socket.io | Express | MongoDB/Mongoose</h4>
             <img class="portfolio-imgs" src="https://i.imgur.com/J9DIn9J.png">
             <p>Havent been sleeping well? Maybe its because youve been eating pizza before bed. Been in the best mood
