moved nav buttons left

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="ui text menu">
         
-        <a class="item">
+        <a class="item home-btn">
           Home
         </a>
         <a class="item">
